# proven_savings

./: .gitignore  README.md  app.py  deployment_requirements.txt  plot_models.py  pyproject.toml  requirements.txt
Banks_webflow/: README.md  index.html
Banks_webflow/css/: styles.css
Banks_webflow/js/: calculator.js
banks/: DEPLOYMENT.md  app.py  app_streamlit.py  requirements.txt
banks/data/: money_saved_JPM2025.csv  money_saved_svb2024.csv
banks/data_analysis/: amazon_comparison.py  bank_stats.py  model_visualization.py
banks/static/: prediction_data.json
banks/templates/: index.html  new_index.html
data_analysis/: data_analysis.py  model_comparison.py
vc/: app.py  main.py
vc/python/: app.py
vc/web/js/: constants.js
vc_web/css/: styles.css
web/: index.html
web/css/: styles.css
web/js/: calculations.js  constants.js  ui.js
