[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proven_savings"
version = "0.1.0"
authors = [
    { name="Nicole Goebel", email="nicolegoebel@gmail.com" },
]
description = "Bank savings prediction app"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "setuptools>=69.0.0",
]
